--- a/module/templates/pick-a-lock.hbs
+++ b/module/templates/pick-a-lock.hbs
@@ -1,5 +1,10 @@
 <form class="pick-a-lock-form">
   <div class="form-group">
+    <label for="pick-a-lock-actor">{{actorLabel}}</label>
+    <input id="pick-a-lock-actor" type="text" name="actorName" value="{{actorName}}" disabled>
+  </div>
+
+  <div class="form-group">
     <label for="pick-a-lock-skill">{{localize "PF2E.Skill"}}</label>
     <select id="pick-a-lock-skill" name="skill">
       {{#each skills}}
@@ -13,9 +18,60 @@
     <input id="pick-a-lock-skill-mod" type="number" name="skillMod" value="{{skillMod}}" disabled>
   </div>
 
+  <fieldset class="form-group">
+    <legend>{{additionalBonusesLabel}}</legend>
+    <div class="bonus-list" data-bonus-list data-bonus-placeholder="{{bonusLabelPlaceholder}}"></div>
+    <button type="button" class="add-bonus" data-add-bonus>+ {{addBonusLabel}}</button>
+  </fieldset>
+
+  <div class="form-group">
+    <label for="pick-a-lock-type">{{lockTypeLabel}}</label>
+    <select id="pick-a-lock-type" name="lockType">
+      {{#each lockTypes}}
+        <option value="{{this.key}}">{{this.label}}</option>
+      {{/each}}
+    </select>
+  </div>
+
   <div class="form-group">
     <label for="pick-a-lock-dc">{{localize "PF2E.DC"}}</label>
-    <input id="pick-a-lock-dc" type="number" name="dc" min="0">
+    <input id="pick-a-lock-dc" type="number" name="dc" min="0" value="{{initialLock.dc}}">
+  </div>
+
+  <div class="form-group">
+    <label for="pick-a-lock-successes">{{requiredSuccessesLabel}}</label>
+    <input id="pick-a-lock-successes" type="number" name="requiredSuccesses" min="1" value="{{initialLock.requiredSuccesses}}">
+  </div>
+
+  <div class="form-group">
+    <label for="pick-a-lock-interval">{{minutesPerAttemptLabel}}</label>
+    <input id="pick-a-lock-interval" type="number" name="intervalMinutes" min="1" value="{{initialLock.intervalMinutes}}">
+  </div>
+
+  <div class="form-group">
+    <label for="pick-a-lock-max-attempts">{{maxAttemptsLabel}}</label>
+    <input id="pick-a-lock-max-attempts" type="number" name="maxAttempts" min="0" value="{{initialLock.maxAttempts}}">
+  </div>
+
+  <div class="form-group checkbox">
+    <label>
+      <input type="checkbox" name="criticalFailureBreaks" {{#if initialLock.criticalFailureBreaks}}checked{{/if}}>
+      {{criticalFailureLabel}}
+    </label>
+  </div>
+
+  <div class="form-group checkbox">
+    <label>
+      <input type="checkbox" name="sneakyKey" {{#if initialLock.sneakyKey}}checked{{/if}}>
+      {{sneakyKeyLabel}}
+    </label>
+  </div>
+
+  <div class="form-group checkbox">
+    <label>
+      <input type="checkbox" name="silentMode" {{#if initialLock.silentMode}}checked{{/if}}>
+      {{silentModeLabel}}
+    </label>
   </div>
 
   <fieldset class="form-group">
